<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.naganithin.accel_sgfiltered.MainActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/xname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x_axis"
            android:layout_alignBaseline="@+id/xvl"
            android:layout_alignBottom="@+id/xvl"
            android:layout_toStartOf="@+id/textView7" />

        <TextView
            android:id="@+id/yname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/xname"
            android:layout_below="@+id/xname"
            android:layout_marginTop="28dp"
            android:text="@string/y_axis" />

        <TextView
            android:id="@+id/zname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/yname"
            android:layout_below="@+id/yname"
            android:layout_marginTop="30dp"
            android:text="@string/z_axis" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:text="@string/accelerometer_data"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/button" />

        <TextView
            android:id="@+id/xvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xval"
            android:layout_below="@+id/textView7"
            android:layout_toEndOf="@+id/textView7"
            android:layout_marginTop="37dp" />

        <TextView
            android:id="@+id/yvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/xvl"
            android:layout_alignTop="@+id/yname"
            android:text="@string/yval" />

        <TextView
            android:id="@+id/zvl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/yvl"
            android:layout_alignTop="@+id/zname"
            android:text="@string/zval" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="start_stop"
            android:text="@string/start_stop"
            android:layout_above="@+id/graph"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/saveMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_saving"
            android:layout_below="@+id/zvl"
            android:layout_centerHorizontal="true" />

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="200dip"
            android:id="@+id/graph"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
